--- a/Game.html
+++ b/Game.html
@@ -11,8 +11,9 @@
     <iframe width="736" height="559" src="https://flowlab.io/game/embed/1719536" 
     frameborder="0" allowfullscreen></iframe>
     
-    <p>The drag and drop Scene <br/></p>
+    <div><p>The drag and drop Scene <br/></p>
     <iframe width="320" height="335" src="https://flowlab.io/game/embed/1719522" 
     frameborder="0" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
