--- a/Game.html
+++ b/Game.html
@@ -11,7 +11,7 @@
     <iframe width="736" height="559" src="https://flowlab.io/game/embed/1719536" 
     frameborder="0" allowfullscreen></iframe>
     
-    <div><p>The drag and drop Scene <br/></p>
+    <div>
     <iframe width="320" height="335" src="https://flowlab.io/game/embed/1719522" 
     frameborder="0" allowfullscreen></iframe>
     </div>
