--- a/index.html
+++ b/index.html
@@ -78,5 +78,8 @@
         <div class = "url">
             <a href = "Animation.html" target="_blank">Animation</a>
         </div>
+        <div class = "url">
+            <a href = "AnimationLab.html" target="_blank">Animation Lab</a>
+        </div>
     </body>
 </html>
