Updated Animation Lab

--- a/AnimationLab.html
+++ b/AnimationLab.html
@@ -9,6 +9,10 @@
         <body>
             <canvas id = "canvas" width = "400" height = "400" style="border: 1px solid black;"></canvas>
             <button id = "clickme">Click Me</button>
-            <script src = "AnimationLab.js"></script>
+            <script src = "AnimationLab.js">
+            </script>
+            <p>
+                This works perfectly on my computer, once I convert it into the website it doesn't work.
+            </p>
         </body>
 </html>
